--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url("/styles/logo.css");
-@import url("/styles/buttons.css");
-@import url("/styles/header.css");
-@import url("/styles/components.css");
+@import url("styles/logo.css");
+@import url("styles/buttons.css");
+@import url("styles/header.css");
+@import url("styles/components.css");
 
 :root {
 	--color-white: #fff;
